--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -274,15 +274,7 @@ footer a {
   margin: 10px 0;
   height: 3px;
   width: 100%;
-  background: linear-gradient(
-    to right,
-    #1E90FF 10% 30%,
-    #20B2AA 30% 40%,
-    #9370DB 40% 60%,
-    #FF8C00 60% 80%,
-    #FFB6C1 80% 95%,
-    #b512ad 95%
-    );
+  background: #20B2AA;
 }
 
 .footer {
@@ -311,7 +303,7 @@ footer a {
   align-items: center;
   height: 24px;
   padding: 0 10px;
-  background-color: #F15BB5;
+  background-color: #20B2AA;
   color: #FFFFFF;
   text-decoration: none;
   border-radius: 3px;
@@ -319,7 +311,7 @@ footer a {
 }
 
 .navigation a:hover {
-  background-color: #D5006D;
+  background-color: #0d7f79;
   transform: scale(1.1);
 }
 
